--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,38 +1,155 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #eeeeee;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* Nav */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: rgb(175, 206, 145);
   color: white;
+  height: 50px;
+  padding: 0 20px;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav a:hover {
+  color: black;
+  background-color: white;
+}
+
+nav a:active {
+  transform: scale(0.95);
+}
+
+
+/* Search Bar */
+
+#search-bar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  transition: height 0.5s ease-in-out;
+  margin-bottom: 0px;
+}
+
+#search-bar-container.search-made {
+  height: 12vh;
+}
+
+#search-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 55px;
+  border-radius: 30px;
+  border: none;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 0 75px;
+  margin: auto;
+  width: 50%;
+}
+
+#search-bar input[type="text"] {
+  border: none;
+  flex: 1;
+  font-size: 24px;
+  height: 100%;
+  margin: 0;
+  outline: none;
+  padding: 0;
+}
+
+#search-bar button[type="submit"] {
+  border: none;
+  background-color: rgb(175, 206, 145);
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 0 20px;
+  height: 100%;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  flex: 1;
+  margin-left: 10px;
+}
+
+#search-bar button[type="submit"]:hover {
+  background-color: white;
+  color: black;
+}
+
+
+/* SearchCard */
+
+#location {
+  justify-content: center;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 25px;
+  margin-bottom: 20px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 25px;
+  color: grey
+}
+
+#average, #custom {
+  background-color: rgb(175, 206, 145);
+  border-radius: 20px;
+  padding: 20px;
+  flex: 1;
+  margin: 20px;
+  color: white;
+  font-size: 20px;
+  margin-top: 50px;
+}
+
+.card {
+  display: flex;
+  justify-content: space-between;
+}
+
+#CAHV, #CAHVNM, #CAHVNQ, #CAHVNY {
+  flex: 1;
+}
+
+#CEHV {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#CEHV input[type="number"] {
+  border-radius: 30px;
+  padding: 10px;
+  font-size: 20px;
+  width: 150px;
+  border: 0px;
+  border-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+/* Map Card */
+
+.map-card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
